--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: fanjialiang # the website title (if blank, full name will be used instead
 first_name: Jiliang
 middle_name: 
 last_name: Fan
-email: you@example.com
+email: fjl2401@foxmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
