--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 # Byte-compiled / optimized / DLL files
+_site
+.bundle
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+.DS_store
+.ruby-version
+.tweet-cache
+Gemfile.lock
+vendor
+
 __pycache__/
 *.py[cod]
 *$py.class
