--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,8 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Jialiang Fan # blog_name will be displayed in your blog page
+blog_name: Jialiang Fan's academic bio
+# blog_name will be displayed in your blog page
 #blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
 blog_description: blogging about robotics
 permalink: /blog/:year/:title/
