--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 name: Jialiang Fan
 email: fjl2401@foxmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Jialiang Fan Personal pages
+  Jialiang Fan's academic pages
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
  
