--- a/_config.yml
+++ b/_config.yml
@@ -114,6 +114,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  publications:
+    output: true
+    permalink: /publications/:path/
 
 news_limit: 5
 
